--- a/labs/lab01.Rmd
+++ b/labs/lab01.Rmd
@@ -91,6 +91,7 @@ which(x == Inf | x == -Inf)
 ```{r}
 x
 x[is.infinite(x)] = NA
+
 which.min(x)
 which.max(x)
 ```
@@ -139,7 +140,7 @@ mean(sample(c(0,1), size = 100, replace = TRUE))
 * Calculate the average of 500 realizations of Bernoullis with p = 0.9 in one line using the `sample` function.
 
 ```{r}
-mean(sample(c(0,1), size = 500, replace = TRUE, prob = c(.1, .9)))
+mean(sample(c(0,1), size = 500, replace = TRUE, prob = c(1, .9)))
 ```
 
 
@@ -153,10 +154,12 @@ x3
 * Use `x_3` to create `x_3_bin`, a binary feature where 0 is no crime and 1 is any crime.
 
 ```{r}
-x_3_bin <- factor(x3, levels = c(0,1,1,1), labels = c("felony","infraction", "misdimeanor", "none")).
+x_3_bin <- factor(x3,c("none","infraction", "misdimeanor", "felony"),c(1,1,1,0))
+x_3_bin
 ```
 * Use `x_3` to create `x_3_ord`, an ordered, nominal factor variable. Ensure the proper ordinal ordering.
 
 ```{r}
-#TO-DO
+x_3_ord = factor(x_3, c("none", "infraction", "misdimeanor", "felony"), ordered = TRUE)
+x_3_ord
 ```
